Addition of the Storage page in Settings
- AutoHide now support vertical | horizontal mode.
- LoadingContainer can now display/hide children components.
- [new] StackedBarChart
